# timer-clienti-test

./: Cargo.toml
src/: main.rs
ui/: app.slint
