[package]
name = "timer-clienti"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.9"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
rfd = "0.17.2"
csv = "1.4.0"

[build-dependencies]
slint-build = "1.9"
